@@ -1,3 +1,4 @@
+2nd tab: Added initial version of energy chunk legend.
 2nd tab: Added check box for controlling energy chunk visibility.
 2nd tab: Added clock control panel.
 Added back the 2nd tab, removed static picture.
